build first ten Life product leaves
